Added tablet and mobile views

--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
 <body class="container home">
   <header>
     <span>TipEasy! Logo</span>
+    <img src="./assets/images/menu-mid.png" alt="">
     <nav>
-      <a href="#">Home</a>
-      <a href="#">Services</a>
-      <a href="#">About</a>
-      <a href="#" class="log">Log In</a>
+      <a href="#" id="link1">Home</a>
+      <a href="#" id="link2">Team</a>
+      <a href="#" id="link3">About</a>
+      <a href="#" id="link4">Sign In</a>
     </nav>
   </header>
   <section class="top-content">
@@ -70,7 +71,6 @@
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis velit sit ratione totam nihil officia, laboriosam neque aut pariatur cumque harum accusamus placeat dicta, numquam eos dolorum qui? Eveniet, quia!</p>
         </div>
       </div>
-      
       <div class="instant">
         <div class="instant-text">
           <h2>HEADER TIED TO INSTANT</h2>
