--- a/index.html
+++ b/index.html
@@ -7,16 +7,18 @@
   <link rel="stylesheet" type="text/css" href="./css/LESS/index.css" />
   <title>Document</title>
   <link href="https://fonts.googleapis.com/css?family=Raleway|Source+Sans+Pro:300" rel="stylesheet">
+  <script type="text/javascript" src="./JS/index.js"></script>
 </head>
 <body class="container home">
   <header>
     <span>TipEasy! Logo</span>
-    <img src="./assets/images/menu-mid.png" alt="">
+    <img src="./assets/images/menu-mid.png" class="menu-img" id="myBtn" alt="">
     <nav>
       <a href="#" id="link1">Home</a>
-      <a href="#" id="link2">Team</a>
-      <a href="#" id="link3">About</a>
-      <a href="#" id="link4">Sign In</a>
+      <a href="#" id="link2">About</a>
+      <a href="#" id="link3">Contact</a>
+      <a href="#" id="link4">Sign Up</a>
+      <a href="#" id="link5">Sign In</a>
     </nav>
   </header>
   <section class="top-content">
@@ -81,6 +83,18 @@
         </div>
       </div>
     </div>
+  </section>
+  <section class="footer">
+    <footer>
+      <nav>
+        <a href="#" id="link1">Home</a>
+        <a href="#" id="link2">About</a>
+        <a href="#" id="link3">Contact</a>
+        <a href="#" id="link4">Sign Up</a>
+        <a href="#" id="link5">Sign In</a>
+      </nav>
+      <p>Copyright</p>
+    </footer>
   </section>
   <!-- <div>Icons made by <a href="https://www.freepik.com/" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" 			    title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" 			    title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div> -->
 </body>
