Working on tablet view nav bar

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body class="container home">
   <header>
-    <span>TipEasy! Logo</span>
+    <img src="./assets/images/eztip-logo.png" class="logo" alt="">
     <img src="./assets/images/menu-mid.png" class="menu-img" id="myBtn" alt="">
     <nav>
       <a href="#" id="link1">Home</a>
@@ -23,17 +23,20 @@
   </header>
   <section class="top-content">
     <div class="top-content-text">
-      <h1>TipEasy!</h1>
-      <div class="tip">
-        <h2>TIP</h2>
-        <p><strong>Lorem ipsum dolor</strong> sit amet consectetur adipisicing elit. Eum perferendis numquam reiciendis deleniti expedita ad! Dolores nostrum voluptate quisquam quibusdam facere veritatis inventore suscipit illum consequatur.</p>
-        <button class="give-tip">GIVE TIP</button>
+      <h1>eztip!</h1>
+      <div class="tip-receive">
+        <div class="tip">
+          <h2>TIP</h2>
+          <p><strong>Lorem ipsum dolor</strong> sit amet consectetur adipisicing elit. Eum perferendis numquam reiciendis deleniti expedita ad! Dolores nostrum voluptate quisquam quibusdam facere veritatis inventore suscipit illum consequatur.</p>
+          <button class="give-tip">GIVE TIP</button>
+        </div>
+        <div class="receive">
+          <h2>SERVING</h2>
+          <p><strong>Lorem ipsum dolor</strong> sit amet consectetur adipisicing elit. Eum perferendis numquam reiciendis deleniti expedita ad! Dolores nostrum voluptate quisquam quibusdam facere veritatis inventore suscipit illum consequatur.</p>
+          <button class="receive-tip">RECEIVE TIPS</button>
+        </div>
       </div>
-      <div class="receive">
-        <h2>SERVING</h2>
-        <p><strong>Lorem ipsum dolor</strong> sit amet consectetur adipisicing elit. Eum perferendis numquam reiciendis deleniti expedita ad! Dolores nostrum voluptate quisquam quibusdam facere veritatis inventore suscipit illum consequatur.</p>
-        <button class="receive-tip">RECEIVE TIPS</button>
-      </div>
+      
     </div>
     <div class="top-content-img">
       <img src="./assets/images/waitress-main1.jpeg" alt="">
