Fixed Nav bar issues

--- a/index.html
+++ b/index.html
@@ -7,18 +7,18 @@
   <link rel="stylesheet" type="text/css" href="./css/LESS/index.css" />
   <title>Document</title>
   <link href="https://fonts.googleapis.com/css?family=Raleway|Source+Sans+Pro:300" rel="stylesheet">
-  <script type="text/javascript" src="./JS/index.js"></script>
+  
 </head>
 <body class="container home">
   <header>
     <img src="./assets/images/eztip-logo.png" class="logo" alt="">
     <img src="./assets/images/menu-mid.png" class="menu-img" id="myBtn" alt="">
-    <nav>
-      <a href="#" id="link1">Home</a>
-      <a href="#" id="link2">About</a>
-      <a href="#" id="link3">Contact</a>
-      <a href="#" id="link4">Sign Up</a>
-      <a href="#" id="link5">Sign In</a>
+    <nav class="nav-bar">
+      <a href="#" class="top-nav" id="link1">Home</a>
+      <a href="#" class="top-nav" id="link2">About</a>
+      <a href="#" class="top-nav" id="link3">Contact</a>
+      <a href="#" class="top-nav" id="link4">Sign Up</a>
+      <a href="#" class="top-nav" id="link5">Sign In</a>
     </nav>
   </header>
   <section class="top-content">
@@ -101,5 +101,6 @@
   </section>
   <!-- <div>Icons made by <a href="https://www.freepik.com/" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" 			    title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" 			    title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div> -->
 </body>
+<script src="./JS/index.js" defer></script>
 </html>
 
