--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <img src="./assets/images/eztip-logo.png" class="logo" alt="">
     <img src="./assets/images/menu-mid.png" class="menu-img" id="myBtn" alt="">
     <nav class="nav-bar">
-      <a href="#" class="top-nav" id="link1">Home</a>
+      <a href="index.html" class="top-nav" id="link1">Home</a>
       <a href="#" class="top-nav" id="link2">About</a>
       <a href="#" class="top-nav" id="link3">Contact</a>
       <a href="#" class="top-nav" id="link4">Sign Up</a>
@@ -44,21 +44,21 @@
   </section>
   <section class="mid-content">
     <div class="mid-content-icons">
-      <div class="img1">
+      <div class="icon" data-icon="1">
         <img src="./assets/images/hand-mid.png" alt="">
         <h4>Send Tips Easily</h4>
       </div>
-      <div class="img2">
+      <div class="icon" data-icon="2">
         <img src="./assets/images/networking.png" alt="">
         <h4>Connect To Peers</h4>
       </div>
-      <div class="img3">
+      <div class="icon" data-icon="3">
         <img src="./assets/images/care.png" alt="">
         <h4>Instantly Share Tips</h4>
       </div>
     </div>
     <div class="imgList">
-      <div class="send">
+      <div class="send content toggleDisplay" data-icon="1">
         <div class="send-text">
           <h2>HEADER TIED TO SEND TIPS EASILY</h2>
           <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Commodi omnis pariatur labore culpa, minima voluptatem maxime sunt ullam possimus asperiores ipsam reprehenderit aspernatur libero sequi perferendis cum quo, praesentium id.</p>
@@ -67,7 +67,7 @@
           <img src="./assets/images/send-tips.jpeg" alt="">
         </div>
       </div>
-      <div class="peers">
+      <div class="peers content toggleDisplay" data-icon="2">
         <div class="peers-img">
           <img src="./assets/images/peers.jpeg" alt="">
         </div>
@@ -76,7 +76,7 @@
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis velit sit ratione totam nihil officia, laboriosam neque aut pariatur cumque harum accusamus placeat dicta, numquam eos dolorum qui? Eveniet, quia!</p>
         </div>
       </div>
-      <div class="instant">
+      <div class="instant content toggleDisplay" data-icon="3">
         <div class="instant-text">
           <h2>HEADER TIED TO INSTANT</h2>
           <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ratione quas nemo pariatur rem adipisci quae laboriosam eligendi fuga ut ad, velit nulla aut similique ea temporibus. Distinctio rem ea expedita.</p>
@@ -84,6 +84,37 @@
         <div class="instant-img">
           <img src="./assets/images/instant.jpeg" alt="">
         </div>
+      </div>
+    </div>
+  </section>
+  <section class="test">
+    <h2>TESTIMONIALS</h2>
+    <div class="person">
+      <div class="person-img">
+        <img src="./assets/images/person1.jpeg" alt="">
+      </div>
+      <div class="person-text">
+        <h4>NAME</h4>
+        <p>ABOUT PERSON</p>
+      </div>
+    </div>
+    <div class="person">
+      <div class="person-img">
+        <img src="./assets/images/person2.png" alt="">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora dignissimos nostrum quam ad odit deleniti sint at velit reprehenderit! Architecto rerum tempora eveniet odio commodi, velit impedit ipsum repellat necessitatibus.</p>
+      </div>
+      <div class="person-text">
+        <h4>NAME</h4>
+        <p>ABOUT PERSON</p>
+      </div>
+    </div>
+    <div class="person">
+      <div class="person-img">
+        <img src="./assets/images/person3.jpeg" alt="">
+      </div>
+      <div class="person-text">
+        <h4>NAME</h4>
+        <p>ABOUT PERSON</p>
       </div>
     </div>
   </section>
@@ -101,6 +132,7 @@
   </section>
   <!-- <div>Icons made by <a href="https://www.freepik.com/" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" 			    title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" 			    title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div> -->
 </body>
-<script src="./JS/index.js" defer></script>
+<script src="./JS/navBar.js" defer></script>
+<script src="./JS/icons.js" defer></script>
 </html>
 
