Fixed spacing issues

--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
     <div class="person">
       <div class="person-img">
         <img src="./assets/images/person1.jpeg" alt="">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt dolorem quisquam dignissimos doloribus natus, hic eligendi quae cumque, cupiditate voluptatem, maxime sed autem ullam voluptate laborum expedita ipsum deleniti asperiores.</p>
       </div>
       <div class="person-text">
         <h4>NAME</h4>
@@ -111,6 +112,7 @@
     <div class="person">
       <div class="person-img">
         <img src="./assets/images/person3.jpeg" alt="">
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempore, vero nam in, ab similique et sequi ad officia sit doloribus sunt hic soluta repellat officiis eveniet odio, neque reprehenderit fugit!</p>
       </div>
       <div class="person-text">
         <h4>NAME</h4>
