Finished coding in a carousel on index.html

--- a/team.html
+++ b/team.html
@@ -108,5 +108,5 @@
   </section>
 </body>
 <script src="./JS/navBar.js" defer></script>
-<script src="./JS/icons.js" defer></script>
+<script src="./JS/carousel.js" defer></script>
 </html>
