--- a/team.html
+++ b/team.html
@@ -103,6 +103,7 @@
         <a href="#" id="link4">Sign Up</a>
         <a href="https://leigh-ann-eztip.netlify.com/" id="link5">Sign In</a>
       </nav>
+      <a href="#" class="apple"><img src="./assets/images/apple-button.png" alt="A picture saying download from the app store"></a>
       <p>Copyright</p>
     </footer>
   </section>
