--- a/about.html
+++ b/about.html
@@ -83,10 +83,10 @@
         <a href="#" id="link4">Sign Up</a>
         <a href="https://leigh-ann-eztip.netlify.com/" id="link5">Sign In</a>
       </nav>
+      <a href="#" class="apple"><img src="./assets/images/apple-button.png" alt="A picture saying download from the app store"></a>
       <p>Copyright</p>
     </footer>
   </section>
-  <!-- <div>Icons made by <a href="https://www.freepik.com/" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" 			    title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" 			    title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div> -->
 </body>
 <script src="./JS/navBar.js" defer></script>
 <script src="./JS/carousel.js" defer></script>
